--- a/templates/email_dg.html
+++ b/templates/email_dg.html
@@ -14,22 +14,21 @@
     <strong>Enrico Magostini</strong><br>
     <small>Consulente Energetico</small></p>
 
-    SUN ECO POWER S.R.L.
-    Mobile:    +39 334 607 9956 
-    e-mail:    e.magostini@sunecopower.it  
-    P.IVA/C.F:01870010855
-    REA: CL-104471
+    SUN ECO POWER S.R.L.<br>
+    Mobile:    +39 334 607 9956 <br> 
+    e-mail:    e.magostini@sunecopower.it <br>  
+    P.IVA/C.F:01870010855 <br>
+    REA: CL-104471 <br>
  
-    www.sunecopower.it
+    www.sunecopower.it <br>
  
-    Le informazioni contenute nella presente comunicazione e i relativi allegati possono essere 
-    riservati e sono, comunque, destinati esclusivamente alle persone o alla Società sopraindicati. 
-    La diffusione, distribuzione e/o copiatura del documento trasmesso da parte di qualsiasi 
-    soggetto diverso dal destinatario è proibita, sia ai sensi dell'art. 616 c.p., sia ai sensi 
-    del D. Lgs. n. 196/2003. Se avete ricevuto questo messaggio per errore, vi preghiamo di 
-    distruggerlo e di informarci immediatamente inviando un messaggio all'indirizzo e-mail  
-    info@sunecopower.it
-    
+    Le informazioni contenute nella presente comunicazione e i relativi allegati possono essere <br> 
+    riservati e sono, comunque, destinati esclusivamente alle persone o alla Società sopraindicati.<br>
+    La diffusione, distribuzione e/o copiatura del documento trasmesso da parte di qualsiasi <br> 
+    soggetto diverso dal destinatario è proibita, sia ai sensi dell'art. 616 c.p., sia ai sensi<br>
+    del D. Lgs. n. 196/2003. Se avete ricevuto questo messaggio per errore, vi preghiamo di<br>
+    distruggerlo e di informarci immediatamente inviando un messaggio all'indirizzo e-mail:<br> 
+    info@sunecopower.it <br>    
     <hr style="border: 0; border-top: 1px solid #eee;">
     <p style="font-size: 10px; color: #999;">
         Riceve questa comunicazione in virtù del Suo ruolo presso {{ company_name }}. 
