--- a/templates/email_dg.html
+++ b/templates/email_dg.html
@@ -14,7 +14,7 @@
     <strong>Enrico Magostini</strong><br>
     <small>Consulente Energetico</small></p>
 
-    SUN ECO POWER S.R.L.<br>
+    <strong>SUN ECO POWER S.r.l.<strong><br>
     Mobile:    +39 334 607 9956 <br> 
     e-mail:    e.magostini@sunecopower.it <br>  
     P.IVA/C.F:01870010855 <br>
