--- a/templates/email_dg.html
+++ b/templates/email_dg.html
@@ -1,6 +1,6 @@
 <html>
 <body style="font-family: Arial, sans-serif; line-height: 1.6; color: #333;">
-    <p>Gentile <strong>{{ lead_name }}</strong>,</p>
+    <p>Gentile <strong>{{ nome_dest }}</strong>,</p>
 
     <p>Le scrivo perché ora l'impianto fotovoltaico per la sua Azienda potrà beneficiare dell'IperAmmortamento 2026, che le permetterà di recuperare il 67% del suo investimento in Credito d'Imposta, immediatamente esigibile già dal 2027.</p>
 
