--- a/templates/email_dg.html
+++ b/templates/email_dg.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
 <html>
+<body>
+    <div style="font-family: Arial, sans-serif; color: #333;">
+        {{ corpo_testuale }}
+    </div>
+</body>
+</html>
+
